# jvm.cc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
doc/: path.txt
lib/minizip/: CMakeLists.txt
src/: cabin.h  constants.ixx  convert.cpp  convert.h  convert.ixx  dll.cpp  dll.h  dll.ixx  encoding.cpp  encoding.h  encoding.ixx  exception.cpp  exception.h  exception.ixx  init.cpp  interpreter.cpp  interpreter.h  interpreter.ixx  jmm.cpp  jmm.h  jni.cpp  jni.h  jvm.cpp  jvmcc.cpp  primitive.cpp  primitive.h  primitive.ixx  properties.cpp  properties.ixx  reference.cpp  reference.h  reference.ixx  slot.cpp  slot.h  slot.ixx  sysinfo.cpp  sysinfo.h  sysinfo.ixx  vm_client.cpp  vmdef.h  (+1 more)
src/classfile/: array_class.cpp  array_class.h  bytecode_reader.h  bytecode_reader.ixx  class.cpp  class.h  class_loader.cpp  class_loader.h  class_loader.ixx  classfile.ixx  constant_pool.cpp  constant_pool.h  constant_pool.ixx  constants.h  descriptor.cpp  descriptor.h  field.cpp  field.h  invoke.cpp  invoke.h  invoke.ixx  meta.h  metadata.ixx  method.cpp  method.h  module.cpp  module.h  module.ixx  poly.cpp  poly.h  poly.ixx  raw_classfile.ixx
src/cmd/: javap.cpp  jimage.cpp  jmod.cpp  jvmcc.cpp
src/jimage/: image_file.ixx  jimage.ixx  jimage_file.ixx  jimage_location.ixx  jimage_strings.cpp  jimage_strings.ixx
src/native/: init_native.cpp  method_handle.cpp  method_handle_natives.cpp  native.cpp  native.ixx  scoped_memory_access.cpp  unsafe.cpp  var_handle.cpp
src/native/java/io/: FileDescriptor.cpp  FileInputStream.cpp  FileOutputStream.cpp  WinNTFileSystem.cpp
src/native/java/lang/: Class.cpp  ClassLoader.cpp  Double.cpp  Float.cpp  Module.cpp  Object.cpp  Runtime.cpp  StackTraceElement.cpp  String.cpp  System.cpp  Thread.cpp  Throwable.cpp
src/native/java/lang/invoke/: MethodHandle.cpp  MethodHandleNatives.cpp  VarHandle.cpp
src/native/java/lang/ref/: Finalizer.cpp  PhantomReference.cpp  Reference.cpp
src/native/java/lang/reflect/: Array.cpp
src/native/java/util/: TimeZone.cpp
src/native/jdk/internal/jimage/: NativeImageBuffer.cpp
src/native/jdk/internal/loader/: BootLoader.cpp  NativeLibraries.cpp
src/native/jdk/internal/misc/: CDS.cpp  ScopedMemoryAccess.cpp  Signal.cpp  Unsafe.cpp  VM.cpp
src/native/jdk/internal/reflect/: ConstantPool.cpp  DirectConstructorHandleAccessor-NativeAccessor.cpp  DirectMethodHandleAccessor-NativeAccessor.cpp  Reflection.cpp
src/native/jdk/internal/util/: SystemProps-Raw.cpp
src/native/sun/io/: Win32ErrorMode.cpp
src/native/sun/nio/ch/: IOUtil.cpp
src/native/sun/nio/fs/: WindowsNativeDispatcher.cpp
src/object/: allocator.cpp  allocator.h  array.cpp  box.cpp  object.cpp  object.h  object.ixx  reflect.cpp  reflect.h  string.cpp
src/os/: linux.cpp  windows.cpp
src/runtime/: frame.h  heap.cpp  heap.h  heap.ixx  java_thread.cpp  runtime.ixx  thread.cpp  thread.h
src/util/: access_flags.ixx  bytes_reader.ixx  convert.ixx  primitive.ixx  sysinfo.ixx
test/: class_loader_test.cpp  class_test.cpp  convert_test.cpp  descriptor_test.cpp  encoding_test.cpp  foo_test.cpp  heap_test.cpp  jimage_test.cpp  object_test.cpp  slot_test.cpp  test.cpp  test.h
test-cpp/: class.cpp  class_loader_test.cpp  convert.cpp  convert_test.cpp  descriptor_test.cpp  encoding_test.cpp  foo.cpp  heap.cpp  jimage_test.cpp  main.cpp  object_test.cpp  slot.cpp  slot_test.cpp  test.cpp  test.h
test-java/: pom.xml
test-java/src/main/java/: Ackermann.java  ArrayTest.java  Base64Test.java  ClassFileTest.java  EncodingTest.java  FibonacciTest.java  GenericTest.java  HelloWorld.java  HttpClientExamples.java  I18nTest.java  NestTest.java  NestTest1.java  NullPointerExceptionClearMsg.java  NumberFormat1.java  NumberFormatTest.java  PatternMatchingInstanceof.java  PrimaryTest.java  QuickSortTest.java  Record1.java  RecordTest.java  RecordTest1.java  RunAllTests.java  RuntimeTest.java  SealedClass.java  SealedTest.java  SealedTest1.java  SecurityTest.java  StringConstant.java  StringIndent.java  StringTest1.java  StringTransform.java  SwingTest.java  SwitchExpression.java  SwitchYield.java  SysPropsTest.java  TextBlock.java  UUIDTest.java  UnicodeTest.java  ZipFileTest.java
test-java/src/main/java/annotation/: AnnotationTest.java  GenericMethodTest.java
test-java/src/main/java/atomic/: AtomicIntegerTest.java
test-java/src/main/java/classloader/: ClassLoader9Test.java  DecrptClassLoader.java  Demo02.java  Demo03.java  Demo04.java  Demo05.java  FileSystemClassLoader.java  NetClassLoader.java
test-java/src/main/java/concurrent/: Atomic1.java  CompletableFuture1.java  ConcurrentHashMap1.java  ConcurrentUtils.java  Executors1.java  Executors2.java  Executors3.java  Lock1.java  Lock2.java  Lock3.java  Lock4.java  Lock5.java  Lock6.java  LongAccumulator1.java  LongAdder1.java  Semaphore1.java  Semaphore2.java  Synchronized1.java  Synchronized2.java  Threads1.java
test-java/src/main/java/datetime/: DateTimeTest.java  LocalDate1.java  LocalDateTime1.java  LocalTime1.java  TimeZoneTest.java
test-java/src/main/java/exception/: CatchTest.java  ExceptionTest.java  FinallyReturnTest.java  InstructionNpeTest.java  TryCatchFinally.java
test-java/src/main/java/field/: ConstantStaticFieldsTest.java  FieldAccessTest.java  FieldsTest.java  FieldsTest1.java  FieldsTest2.java
test-java/src/main/java/file/: FileDescriptorTest.java  FileTest.java
test-java/src/main/java/initialization/: Init1.java  InitInterface.java  ObjectInitTest.java
test-java/src/main/java/instructions/: CheckCast.java  LookupSwitch.java  MathTest.java  StringSwitch.java  TableSwitch.java  WideInstruction.java
test-java/src/main/java/interface0/: GetInterfaceMethodTest.java  InterfaceDefaultMethodTest.java  InterfaceField.java  InterfaceMethodTest.java  InterfaceMethodTest2.java  (+1 more)
test/src/main/java/: ClassNameTest.java  EnumTest.java  FibonacciTest.java  JVMTest.java  JumpMultiLoop.java  ModuleTest.java  NumberFormatTest.java  PrintArgs.java  PrintTest.java  QuickSortTest.java  RecordTest.java  ReflectTest.java  RunAllTests.java  StringTest.java  SysPropsTest.java
(+161 files in other folders)
